force-app/main/default/objects/outfunds__Funding_Request__c/fields/Eligible__c.field-meta.xml
<CustomField>
    <fullName>Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible</label>
    <type>Checkbox</type>
</CustomField>