force-app/main/default/objects/outfunds__Funding_Request__c/fields/Letter_of_Intent_Details__c.field-meta.xml
<CustomField>
    <fullName>Letter_of_Intent_Details__c</fullName>
    <label>Letter of Intent Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>