force-app/main/default/objects/outfunds__Funding_Request__c/fields/Narrative_Response__c.field-meta.xml
<CustomField>
    <fullName>Narrative_Response__c</fullName>
    <label>Narrative Response</label>
    <length>131070</length>
    <type>LongTextArea</type>
</CustomField>