force-app/main/default/objects/outfunds__Funding_Request__c/fields/outfunds__Application_Date__c.field-meta.xml
<CustomField>
    <fullName>outfunds__Application_Date__c</fullName>
    <description>Date the application has been submitted.</description>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>