force-app/main/default/objects/outfunds__Funding_Request__c/fields/outfunds__Awarded_Date__c.field-meta.xml
<CustomField>
    <fullName>outfunds__Awarded_Date__c</fullName>
    <label>Awarded Date</label>
    <type>Date</type>
</CustomField>