force-app/main/default/objects/outfunds__Funding_Request__c/fields/outfunds__Close_Date__c.field-meta.xml
<CustomField>
    <fullName>outfunds__Close_Date__c</fullName>
    <description>Date the application is fully closed - either awarded and fully disbursed, declined or withdrawn.</description>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>