force-app/main/default/objects/outfunds__Funding_Request__c/fields/outfunds__Closed_reason__c.field-meta.xml
<CustomField>
    <fullName>outfunds__Closed_reason__c</fullName>
    <label>Closed reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>