force-app/main/default/objects/outfunds__Funding_Request__c/fields/outfunds__FundingProgram__c.field-meta.xml
<CustomField>
    <fullName>outfunds__FundingProgram__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the funding program from which funds are being requested.</description>
    <label>Funding Program</label>
    <referenceTo>outfunds__Funding_Program__c</referenceTo>
    <relationshipLabel>Funding Requests</relationshipLabel>
    <relationshipName>FundingRequests</relationshipName>
    <type>Lookup</type>
</CustomField>