force-app/main/default/objects/outfunds__Funding_Request__c/fields/outfunds__Geographical_Area_Served__c.field-meta.xml
<CustomField>
    <fullName>outfunds__Geographical_Area_Served__c</fullName>
    <label>Geographical Area Served</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>City</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Region</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>