force-app/main/default/objects/outfunds__Funding_Request__c/fields/outfunds__Population_Served__c.field-meta.xml
<CustomField>
    <fullName>outfunds__Population_Served__c</fullName>
    <label>Population Served</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adults</fullName>
            </value>
            <value>
                <fullName>Below Poverty level</fullName>
            </value>
            <value>
                <fullName>Caregivers</fullName>
            </value>
            <value>
                <fullName>Children and Youth</fullName>
            </value>
            <value>
                <fullName>Economically Disadvantaged People</fullName>
            </value>
            <value>
                <fullName>Ethnic and racial groups</fullName>
            </value>
            <value>
                <fullName>Families</fullName>
            </value>
            <value>
                <fullName>Heterosexuals</fullName>
            </value>
            <value>
                <fullName>Homeless</fullName>
            </value>
            <value>
                <fullName>Immigrants and Refugees</fullName>
            </value>
            <value>
                <fullName>Incarcerated People</fullName>
            </value>
            <value>
                <fullName>LGBTQ</fullName>
            </value>
            <value>
                <fullName>Men</fullName>
            </value>
            <value>
                <fullName>People with Disabilities</fullName>
            </value>
            <value>
                <fullName>People with Diseases and Illnesses</fullName>
            </value>
            <value>
                <fullName>Religious Groups</fullName>
            </value>
            <value>
                <fullName>Veteran</fullName>
            </value>
            <value>
                <fullName>Victims and Oppressed People</fullName>
            </value>
            <value>
                <fullName>Women</fullName>
            </value>
            <value>
                <fullName>Youth at Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>