force-app/main/default/objects/outfunds__Funding_Request__c/fields/outfunds__Recommended_Amount__c.field-meta.xml
<CustomField>
    <fullName>outfunds__Recommended_Amount__c</fullName>
    <label>Recommended Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>