force-app/main/default/objects/outfunds__Funding_Request__c/fields/outfunds__Requested_For__c.field-meta.xml
<CustomField>
    <fullName>outfunds__Requested_For__c</fullName>
    <label>Requested For</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>