force-app/main/default/objects/outfunds__Funding_Request__c/fields/outfunds__Term_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>outfunds__Term_Start_Date__c</fullName>
    <label>Term Start Date</label>
    <type>Date</type>
</CustomField>