force-app/main/default/objects/outfunds__Funding_Request__c/fields/outfunds__Terms__c.field-meta.xml
<CustomField>
    <fullName>outfunds__Terms__c</fullName>
    <label>Terms</label>
    <type>TextArea</type>
</CustomField>