force-app/main/default/objects/outfunds__Funding_Request__c/fields/outfunds__Total_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>outfunds__Total_Cancelled__c</fullName>
    <label>Total Cancelled</label>
    <summarizedField>outfunds__Disbursement__c.outfunds__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>outfunds__Disbursement__c.outfunds__Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>outfunds__Disbursement__c.outfunds__Funding_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>