force-app/main/default/objects/outfunds__Funding_Request__c/fields/outfunds__Total_Remaining__c.field-meta.xml
<CustomField>
    <fullName>outfunds__Total_Remaining__c</fullName>
    <description>Amount remaining to be disbursed.</description>
    <formula>outfunds__Awarded_Amount__c - outfunds__Total_Disbursed__c - outfunds__Unpaid_Disbursements__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available for Disbursement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>