force-app/main/default/objects/outfunds__Funding_Request__c/fields/outfunds__Unpaid_Disbursements__c.field-meta.xml
<CustomField>
    <fullName>outfunds__Unpaid_Disbursements__c</fullName>
    <description>The rollup of all disbursements that do not have a status  &quot;Paid&quot; or &quot;Cancelled&quot;</description>
    <label>Unpaid Disbursements</label>
    <summarizedField>outfunds__Disbursement__c.outfunds__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>outfunds__Disbursement__c.outfunds__Status__c</field>
        <operation>notEqual</operation>
        <value>Paid, Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>outfunds__Disbursement__c.outfunds__Funding_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>