force-app/main/default/objects/outfunds__Funding_Request__c/fields/sfdo_grants__CollaboratorGroupId__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__CollaboratorGroupId__c</fullName>
    <description>The Salesforce ID of the public group that shares this Funding Request with collaborators.</description>
    <label>Collaborator Group ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>