force-app/main/default/objects/outfunds__Funding_Request__c/fields/sfdo_grants__Identifier__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__Identifier__c</fullName>
    <description>A unique identifier for a Funding Request record</description>
    <displayFormat>FR-{00000}</displayFormat>
    <inlineHelpText>A unique identifier for a Funding Request record</inlineHelpText>
    <label>Reference Number</label>
    <type>AutoNumber</type>
</CustomField>