force-app/main/default/objects/outfunds__Funding_Request__c/fields/sfdo_grants__Invited_Date__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__Invited_Date__c</fullName>
    <description>The date when the Funding Request invitation was sent to a user.</description>
    <inlineHelpText>The date when the Funding Request invitation was sent to a user.</inlineHelpText>
    <label>Invited Date</label>
    <type>Date</type>
</CustomField>