force-app/main/default/objects/outfunds__Funding_Request__c/fields/Terms_and_Conditions_Signed__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Conditions_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terms and Conditions Signed</label>
    <type>Checkbox</type>
</CustomField>