force-app/main/default/objects/outfunds__Funding_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Block Grant</fullName>
            </value>
            <value>
                <fullName>Formula Grant</fullName>
            </value>
            <value>
                <fullName>Matching Grant</fullName>
            </value>
            <value>
                <fullName>Individual Assistance</fullName>
            </value>
            <value>
                <fullName>Integrated Eligibility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>