force-app/main/default/objects/outfunds__Funding_Request__c/listViews/gps_Funding_Request_Omni_Channel_Routing_Funding_Request.listView-meta.xml
<ListView>
    <fullName>gps_Funding_Request_Omni_Channel_Routing_Funding_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>GPS Funding Request Omni-Channel Routing</label>
    <queue>gps_Funding_Request_Omni_Channel_Routing</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>