force-app/main/default/objects/outfunds__Funding_Request__c/listViews/Letter_of_Intent_Submitted.listView-meta.xml
<ListView>
    <fullName>Letter_of_Intent_Submitted</fullName>
    <columns>NAME</columns>
    <columns>outfunds__Applying_Contact__c</columns>
    <columns>outfunds__FundingProgram__c</columns>
    <columns>outfunds__Applying_Organization__c</columns>
    <columns>outfunds__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>outfunds__Status__c</field>
        <operation>equals</operation>
        <value>LOI Submitted</value>
    </filters>
    <label>Letter of Intent Submitted</label>
</ListView>