force-app/main/default/objects/outfunds__Funding_Request__c/listViews/My_Applications.listView-meta.xml
<ListView>
    <fullName>My_Applications</fullName>
    <columns>NAME</columns>
    <columns>outfunds__Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Applications</label>
</ListView>