force-app/main/default/objects/outfunds__Funding_Request__c/listViews/outfunds__All.listView-meta.xml
<ListView>
    <fullName>outfunds__All</fullName>
    <columns>NAME</columns>
    <columns>outfunds__Applying_Contact__c</columns>
    <columns>outfunds__FundingProgram__c</columns>
    <columns>outfunds__Status__c</columns>
    <columns>outfunds__Requested_Amount__c</columns>
    <columns>outfunds__Application_Date__c</columns>
    <columns>outfunds__Awarded_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>