force-app/main/default/objects/outfunds__Funding_Request__c/listViews/outfunds__Awarded_Funding_Requests.listView-meta.xml
<ListView>
    <fullName>outfunds__Awarded_Funding_Requests</fullName>
    <columns>NAME</columns>
    <columns>outfunds__Applying_Contact__c</columns>
    <columns>outfunds__Applying_Employee__c</columns>
    <columns>outfunds__Applying_Organization__c</columns>
    <columns>outfunds__Status__c</columns>
    <columns>outfunds__Awarded_Amount__c</columns>
    <columns>outfunds__Awarded_Date__c</columns>
    <columns>outfunds__Term_Start_Date__c</columns>
    <columns>outfunds__Term_End_Date__c</columns>
    <columns>outfunds__Total_Disbursed__c</columns>
    <columns>outfunds__Total_Remaining__c</columns>
    <columns>outfunds__Close_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>outfunds__Status__c</field>
        <operation>equals</operation>
        <value>Awarded</value>
    </filters>
    <label>Awarded Funding Requests</label>
</ListView>