force-app/main/default/objects/outfunds__Funding_Request__c/listViews/outfunds__Fully_Disbursed_Funding_Requests.listView-meta.xml
<ListView>
    <fullName>outfunds__Fully_Disbursed_Funding_Requests</fullName>
    <columns>NAME</columns>
    <columns>outfunds__Applying_Contact__c</columns>
    <columns>outfunds__Applying_Employee__c</columns>
    <columns>outfunds__Applying_Organization__c</columns>
    <columns>outfunds__Status__c</columns>
    <columns>outfunds__Requested_Amount__c</columns>
    <columns>outfunds__Application_Date__c</columns>
    <columns>outfunds__Awarded_Amount__c</columns>
    <columns>outfunds__Awarded_Date__c</columns>
    <columns>outfunds__Close_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>outfunds__Status__c</field>
        <operation>equals</operation>
        <value>Fully Disbursed</value>
    </filters>
    <label>Fully Disbursed Funding Requests</label>
</ListView>