force-app/main/default/objects/outfunds__Funding_Request__c/listViews/outfunds__Funding_Requests_by_Status.listView-meta.xml
<ListView>
    <fullName>outfunds__Funding_Requests_by_Status</fullName>
    <columns>NAME</columns>
    <columns>outfunds__Applying_Organization__c</columns>
    <columns>outfunds__Applying_Contact__c</columns>
    <columns>outfunds__FundingProgram__c</columns>
    <columns>outfunds__Application_Date__c</columns>
    <columns>outfunds__Status__c</columns>
    <columns>outfunds__Requested_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>Funding Requests by Status</label>
</ListView>