force-app/main/default/objects/outfunds__Funding_Request__c/listViews/outfunds__Invited_Funding_Requests.listView-meta.xml
<ListView>
    <fullName>outfunds__Invited_Funding_Requests</fullName>
    <columns>NAME</columns>
    <columns>outfunds__Applying_Contact__c</columns>
    <columns>outfunds__Applying_Employee__c</columns>
    <columns>outfunds__Applying_Organization__c</columns>
    <columns>outfunds__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>outfunds__Status__c</field>
        <operation>equals</operation>
        <value>Invited</value>
    </filters>
    <label>Invited Funding Requests</label>
</ListView>